--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -1,1 +1,11 @@
-<p>components works!</p>
+<div class="container mt-4">
+    <div class="row">
+        <div class="col">
+            <div class="card">
+                <div class="card-hearder">
+                    <h3>Github Search</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
