--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -5,6 +5,16 @@
                 <div class="card-hearder">
                     <h3>Github Search</h3>
                 </div>
+                <div class="card-body">
+                    <form>
+                        <div class="form-group">
+                            <input type="search" class="form-control">
+                        </div>
+                        <div>
+                            <input type="submit" value="submit" class="btn btn-secondary ">
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
