--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -8,7 +8,7 @@
                 <div class="card-body">
                     <form>
                         <div class="form-group">
-                            <input type="search" class="form-control">
+                            <input [(ngModel)]="githubUser" name="user" type="search" class="form-control">
                         </div>
                         <div>
                             <input type="submit" value="submit" class="btn btn-secondary ">
