--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -6,12 +6,12 @@
                     <h3>Github Search</h3>
                 </div>
                 <div class="card-body">
-                    <form>
+                    <form (submit)="searchUser()">
                         <div class="form-group">
                             <input [(ngModel)]="githubUser" name="user" type="search" class="form-control">
                         </div>
                         <div>
-                            <input type="submit" value="submit" class="btn btn-secondary ">
+                            <input type="submit" value="search" class="btn btn-secondary ">
                         </div>
                     </form>
                 </div>
