--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -19,3 +19,25 @@
         </div>
     </div>
 </div>
+
+<div class="container mt-4">
+    <div class="row">
+        <div class="col">
+            <div class="card">
+                <div class="card-hearder">
+                    <h3>Github Search</h3>
+                </div>
+                <div class="card-body">
+                    <form (submit)="searchUser()">
+                        <div class="form-group">
+                            <input [(ngModel)]="githubUserQuery" name="user" type="search" class="form-control">
+                        </div>
+                        <div>
+                            <input type="submit" value="search" class="btn btn-secondary ">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
