Edit profile components html

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -20,5 +20,5 @@
 </div>
 
 <div class="row3">
-<button class="component"><a routerLink='/component' routerLinkActive='active'>Go Back Home</a></button>
+<button class="components"><a routerLink='/components' routerLinkActive='active'>Go Back Home</a></button>
 </div>
