--- a/src/app/repo/repo.component.html
+++ b/src/app/repo/repo.component.html
@@ -1,1 +1,21 @@
-<p>repo works!</p>
+<div class="container">
+    <ul class="bar">
+      <li>Git-hub Search</li>
+    </ul>
+    <!-- <ng-progress></ng-progress> -->
+    <form (ngSubmit)='findProfile()' #searchForm='ngForm'>
+         <div class="form-group">
+           <input type="text" class="form-control" placeholder="search  git repos with username" [(ngModel)] ="username" name="username" (keyup)="findProfile()">
+         </div>
+       </form>
+  <h2 appHighlight>Repository</h2>
+      <!-- <div class="row" *ngFor="let repo of Repos let i=index" > -->
+        <p>Repo name:{{repo?.name}}</p>
+        <p><a href="{{repo?.html_url}}" class="btn btn-sm btn-success pull-right">View this Repo</a></p>
+        <p>Repo Description:{{repo?.description}}</p>
+
+  <!-- </div> -->
+  </div>
+  <div>
+   <button class="components"><a routerLink='/components' routerLinkActive='active'>GO Back Home</a></button>
+  </div>
