--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,24 +1,42 @@
-<div class = "avatar">
-    <img src="{{profile.avatar_url}}" class="avatarimg" alt="image">
-</div>
-<div class="row2">
- <div class="col-sm-6">
+<div class="container">
+    <ul class="bar">
+      <li>Git-hub Search</li>
+    </ul>
+    <!-- <ng-progress></ng-progress> -->
+  <div class="form">
+    <form (ngSubmit)='findProfile()' #searchForm='ngForm'>
+         <div class="form-group">
+           <input type="text" class="form-control" placeholder="search  git users with username" [(ngModel)] ="username" name="username" (keyup)="findProfile()">
+        </div>
+       </form>
+  </div>
+  <h2 appHighlight>Profile Details</h2>
 
-    <div class="panel">Profile Name:{{profile.name}}</div>
-    <div class="panel"><a href="{{profile.url}}">Profile Url:{{profile.url}}</a></div>
-    <div class="panel">Profile Bio:{{profile.bio}}</div>
-    <div class="panel">Location:{{profile.location}}</div>
-</div>
-<div class="col-sm-6">
-    <label for="Repos"> Repos:{{profile.public_repos}}</label><br>
-    <label for="followers">Followers:{{profile.followers}}</label><br>
-    <label for="following">Following:{{profile.following}}</label>
-    <div class="label label-default">This account was created on {{profile.created_at}}</div>
-    <div class="label label-default">{{profile.created_at|joinDateCount}} days ago</div>
+      <div class="row">
+        <div class = "avatar">
+              <img src="{{profile.avatar_url}}" class="avatarimg" alt="image">
+          </div>
+        </div>
+        <div class="row2">
+           <div class="col-sm-6">
 
- </div>
-</div>
+              <div class="panel">Profile Name:{{profile.name}}</div>
+              <div class="panel"><a href="{{profile.url}}">Profile Url:{{profile.url}}</a></div>
+              <div class="panel">Profile Bio:{{profile.bio}}</div>
+              <div class="panel">Location:{{profile.location}}</div>
+          </div>
+          <div class="col-sm-6">
+              <label for="Repos"> Repos:{{profile.public_repos}}</label><br>
+              <label for="followers">Followers:{{profile.followers}}</label><br>
+              <label for="following">Following:{{profile.following}}</label>
+              <div class="label label-default">This account was created on {{profile.created_at}}</div>
+              <div class="label label-default">{{profile.created_at|DateCount}} days ago</div>
 
-<div class="row3">
-<button class="components"><a routerLink='/components' routerLinkActive='active'>Go Back Home</a></button>
-</div>
+           </div>
+         </div>
+
+     <div class="row3">
+      <button class="components"><a routerLink='/components' routerLinkActive='active'>Go Back Home</a></button>
+    </div>
+
+  </div>
