Edit components html

--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -1,10 +1,9 @@
 <div class="container">
-    <h1>Welcome to Github-Search App</h1>
-    <p>This web-site allows you to search through github for people you are interested in or repositories that have caught your eye.Enjoy</p>
+    <h1>Github Search App</h1>
     <div>
-      <button class="profile"><a routerLink='/profile' routerLinkActive='active'>search using profile name</a></button>
+      <button style="background-color: skyblue" class="profile"><a routerLink='/profile' routerLinkActive='active'>search using profile name</a></button><br><br>
     </div>
     <div>
-      <button class="repo"><a routerLink='/repo' routerLinkActive='active'>search using repository name</a></button>
+      <button style="background-color: skyblue" class="repo"><a routerLink='/repo' routerLinkActive='active'>search using repository name</a></button>
     </div>
     </div>
